# Fast-CDR

./: BUILD.bazel  MODULE.bazel
